# valihuuto-lambdas

./: Cargo.toml  README.md
src/lambdas/lambda1/: event_handler.rs  main.rs  memos.rs
src/lambdas/lambda2/: event_handler.rs  main.rs  social_media.rs
