[package]
name = "huutojalambda"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.16"
aws-sdk-dynamodb = "1.65.0"
aws-sdk-sqs = "1.60.0"
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["alb", "apigw", "eventbridge"] }
chrono = "0.4.39"
dotenv = "0.15.0"

lambda_runtime = "0.13.0"
native-tls = "0.2.14"
regex = "1.11.1"
reqwest = "0.12.12"
rss = "2.0.12"
serde_json = "1.0.139"
tokio = { version = "1", features = ["macros"] }
urlencoding = "2.1.3"

[[bin]]
name = "lambda1"
path = "src/lambdas/lambda1/main.rs"
test = false

[[bin]]
name = "lambda2"
path = "src/lambdas/lambda2/main.rs"
test = false
